# route-kun

./: .env.example  .eslintrc.cjs  .gitignore  .prettierignore  AGENTS.md  IMPLEMENTATION_SUMMARY.md  README.md  docker-compose.test.yml  package.json  pnpm-lock.yaml  tsconfig.base.json  turbo.json
.github/workflows/: test.yml
apps/web/: package.json  playwright.config.ts  tsconfig.json  vitest.config.ts  vitest.setup.ts
apps/web/app/: address-form.test.tsx  globals.css  layout.test.tsx  layout.tsx  page.test.tsx  page.tsx
apps/web/app/actions/: convert-address-list.integration.test.ts  convert-address-list.test.ts  convert-address-list.ts  geocode-cache.test.ts  geocode-cache.ts  geocode-client.test.ts  geocode-client.ts
apps/web/app/api/trpc/[trpc]/: handler.ts  route.test.ts  route.ts
apps/web/components/: route-map.tsx
apps/web/scripts/: generate-placeholder.mjs
apps/web/src/demo/: route-scenarios.ts
apps/web/src/lib/: trpc.tsx
apps/web/src/test-utils/: mock-trpc.tsx
apps/web/tests/e2e/: accessibility.spec.ts  fallback.spec.ts  optimize.spec.ts
docs/: Design.md  DistanceCacheDesign.md  Prompt.md  Week1.md  Week2.5.md  Week2.5_0.5.md  Week2.5_0.md  Week2.5_1.md  Week2.md  Week3.md
services/optimizer-py/: README.md  pyproject.toml
services/optimizer-py/src/optimizer_service/: main.py  schemas.py  solver.py
services/optimizer-py/src/routekun_optimizer.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
